fixing table on mobile view

--- a/design/static/styles/common.css
+++ b/design/static/styles/common.css
@@ -114,7 +114,7 @@ option {
   }
 
   .button-container {
-    margin-left: 10%;
+    margin-right: 70px;
   }
 
   .button-container .next-age-button,
@@ -136,6 +136,7 @@ option {
 
   .result-container .age-result-text {
     font-size: 20px;
+    margin-right: 70px;
   }
 
   .result-container table {
@@ -204,7 +205,7 @@ option {
   }
 
   .button-container {
-    margin-left: 10%;
+    margin-right: 70px;
   }
 
   .button-container .next-age-button,
@@ -226,6 +227,7 @@ option {
 
   .result-container .age-result-text {
     font-size: 20px;
+    margin-right: 70px;
   }
 
   .result-container table {
